<resources>
    <string name="app_name">Rose Thrive</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="login">Login</string>
    <string name="post_title">Post title</string>
    <string name="post_body">Post body</string>
    <string name="delete_post">Delete post</string>
    <string name="my_posts">My Posts</string>

    <string-array name="category_array">
        <item>Books for Sale</item>
        <item>Lofts for Sale</item>
        <item>Furniture for Sale</item>
        <item>Cars/Bikes for Sale</item>
        <item>Electronics for Sale</item>
        <item>General for Sale</item>
        <item>Ride Share</item>
        <item>Housing</item>
        <item>Services (Tutoring)</item>
        <item>Wanted</item>
        <item>Lost &amp; Found</item>
        <item>Announcements</item>
        <item>Community</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notifications_settings_title">Receive Notifications for:</string>
    <string name="my_account">My Account</string>
    <string name="sign_out">Sign Out</string>

    <string name="REGISTRY_TOKEN">4dba1a85-cb2d-44b4-99c7-f518a70afbaf</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirmation_message">This action cannot be undone. Are you sure you want to proceed?</string>
    <string name="channel_name">Rose thrive</string>
    <string name="channel_desc">Rose Thrive notification</string>

    <string name="new_post_added">New post added</string>
    <string name="new_reply_to_your_post">New reply to your post</string>
    <string name="new_reply_to_subscribed_post">New reply to post you commented on</string>
    <string name="edit_to_subscribed_post">Edit to post you commented on</string>
    <string name="edit_to_item_last_edited_by_you">Edit to item last edited by you</string>
    <string name="subscribed_post_deleted">Post you commented on deleted</string>
    <string name="post_deleted">Post deleted!</string>
    <string name="post_edited">Post edited!</string>
    <string name="new_post">New post!</string>
    <string name="new_comment">New comment!</string>

</resources>