<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_settings_title"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/new_post_added_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/new_post_added"
        android:textSize="16sp"
        android:layout_marginVertical="8dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/new_reply_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/new_reply_to_your_post"
        android:textSize="16sp"
        android:layout_marginVertical="8dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/new_reply_to_sub_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/new_reply_to_subscribed_post"
        android:textSize="16sp"
        android:layout_marginVertical="8dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/edit_to_sub_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/edit_to_subscribed_post"
        android:textSize="16sp"
        android:layout_marginVertical="8dp" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/deleted_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/subscribed_post_deleted"
        android:textSize="16sp"
        android:layout_marginVertical="8dp" />

</LinearLayout>