<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.rosethrive.MainActivity">
    <group
        android:id="@+id/group1"
        >
    <item
        android:id="@+id/notif_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/account_link"
        android:orderInCategory="90"
        android:title="@string/my_account"
        app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/group_2">
    <item
        android:id="@+id/sign_out"
        android:orderInCategory="110"
        android:title="@string/sign_out"
        app:showAsAction="never" />
    </group>
</menu>